feat: add skills section HTML structure

--- a/src/template.html
+++ b/src/template.html
@@ -300,24 +300,150 @@
           the list just keeps growing! :)
         </p>
         <h3>Programming languages</h3>
-        <div id="languages">
-          <!-- 8 *
+        <div>
           <figure>
-            <a href="">
-              <img src="" alt="">
-              <figcaption></figcaption>
-            </a>
-          </figure> -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
+            />
+            <figcaption>JavaScript</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+            />
+            <figcaption>HTML</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
+            />
+            <figcaption>CSS</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg"
+            />
+            <figcaption>Python</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg"
+            />
+            <figcaption>C++</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/matlab/matlab-original.svg"
+            />
+            <figcaption>MATLAB</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/wolfram-language-seeklogo-color.svg" />
+            <figcaption>Wolfram Language</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/fortran/fortran-original.svg"
+            />
+            <figcaption>Fortran</figcaption>
+          </figure>
         </div>
         <h3>Tools</h3>
-        <div id="tools">
-          <!-- 14 *
+        <div>
           <figure>
-            <a href="">
-              <img src="" alt="">
-              <figcaption></figcaption>
-            </a>
-          </figure> -->
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
+            />
+            <figcaption>React</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vite/vite-original.svg"
+            />
+            <figcaption>Vite</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/webpack/webpack-original.svg"
+            />
+            <figcaption>Webpack</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
+            />
+            <figcaption>Git</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg"
+            />
+            <figcaption>Node.js</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg"
+            />
+            <figcaption>npm</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
+            />
+            <figcaption>Tailwind CSS</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postcss/postcss-original.svg"
+            />
+            <figcaption>PostCSS</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg"
+            />
+            <figcaption>Jest</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/babel/babel-original.svg"
+            />
+            <figcaption>Babel</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eslint/eslint-original.svg"
+            />
+            <figcaption>ESLint</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/prettier-logo_svgstack_com_29071750945628.svg" />
+            <figcaption>Prettier</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/latex/latex-original.svg"
+            />
+            <figcaption>LaTeX</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lodash/lodash-original.svg"
+            />
+            <figcaption>Lodash</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/imagemin-seeklogo.svg" />
+            <figcaption>Imagemin</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/v2-7a8ee7eb8cc95edc8b304c2bb1fab75c_ipico.png" />
+            <figcaption>date-fns</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/PubSubJS.png" />
+            <figcaption>PubSubJS</figcaption>
+          </figure>
         </div>
       </section>
       <section class="separator pb-20" id="contact">
