WIP: fix mobile design

--- a/src/template.html
+++ b/src/template.html
@@ -11,13 +11,13 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
   </head>
-  <body class="px-[50px]">
+  <body class="lg:px-[50px] px-[15px]">
     <header
-      class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[50px] py-[15px] backdrop-blur-sm"
+      class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[10px] py-[8px] lg:px-[50px] lg:py-[15px] backdrop-blur-sm"
     >
-      <h1 class="mr-10 text-3xl font-medium whitespace-nowrap">Hilman Fikry</h1>
+      <h1 class="lg:mr-10 mr-2 lg:text-3xl text-lg font-medium whitespace-nowrap">Hilman Fikry</h1>
       <nav>
-        <ul class="flex justify-center gap-x-5 text-2xl">
+        <ul class="flex justify-center gap-x-5 lg:text-2xl text-md">
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -27,7 +27,7 @@
     </header>
     <main class="relative z-0 pt-[100px]">
       <section
-        class="grid min-h-[calc(100vh-100px)] grid-flow-col grid-cols-[2fr_1fr] grid-rows-2 items-start gap-x-[40px] px-[150px]"
+        class="grid min-h-[calc(100vh-100px)] lg:grid-flow-col lg:grid-cols-[2fr_1fr] lg:grid-rows-2 items-start gap-x-[40px] lg:px-[150px] px-[20px]"
         id="about"
       >
         <h2 class="flex flex-col self-center text-5xl/snug font-semibold">
@@ -44,7 +44,7 @@
           Barcelona. Now I craft the web, daily.
         </p>
         <div
-          class="row-span-full mt-[100px] flex flex-col items-center gap-[100px] justify-self-center"
+          class="lg:row-span-full mt-[100px] flex flex-col items-center gap-[100px] justify-self-center"
         >
           <div class="relative">
             <img
