--- a/src/template.html
+++ b/src/template.html
@@ -11,13 +11,17 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
   </head>
-  <body class="lg:px-[50px] px-[15px]">
+  <body class="px-[8px] lg:px-[50px]">
     <header
-      class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[10px] py-[8px] lg:px-[50px] lg:py-[15px] backdrop-blur-sm"
+      class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[10px] py-[8px] backdrop-blur-sm lg:px-[50px] lg:py-[15px]"
     >
-      <h1 class="lg:mr-10 mr-2 lg:text-3xl text-lg font-medium whitespace-nowrap">Hilman Fikry</h1>
+      <h1
+        class="mr-4 text-lg font-medium whitespace-nowrap lg:mr-10 lg:text-3xl"
+      >
+        Hilman Fikry
+      </h1>
       <nav>
-        <ul class="flex justify-center gap-x-5 lg:text-2xl text-md">
+        <ul class="text-base flex justify-center gap-x-2 lg:gap-x-5 lg:text-2xl">
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -25,32 +29,34 @@
         </ul>
       </nav>
     </header>
-    <main class="relative z-0 pt-[100px]">
+    <main class="relative z-0 pt-[5px] lg:pt-[100px]">
       <section
-        class="grid min-h-[calc(100vh-100px)] lg:grid-flow-col lg:grid-cols-[2fr_1fr] lg:grid-rows-2 items-start gap-x-[40px] lg:px-[150px] px-[20px]"
+        class="grid xl:min-h-[calc(100vh-100px)] items-start gap-x-[40px] px-[20px] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] pb-20 xl:pb-0"
         id="about"
       >
-        <h2 class="flex flex-col self-center text-5xl/snug font-semibold">
+        <h2 class="flex flex-col self-center">
           <span>Hi, I'm</span>
           <span>Hilman Fikry</span>
           <span
             ><span>a </span><span id="typing"></span><span id="cursor"></span
           ></span>
         </h2>
-        <p class="mr-30 border-l-10 border-slate-500 px-10 py-5 text-xl/normal">
+        <p
+          class="text-base/normal my-10 border-l-10 border-slate-500 px-10 py-5 lg:mr-30 lg:text-xl/normal"
+        >
           I'm a developer from Indonesia with roots in physics. I graduated as
           valedictorian from Institut Teknologi Bandung and earned a fully
           funded master's in Quantum Science and Technology at the University of
           Barcelona. Now I craft the web, daily.
         </p>
         <div
-          class="lg:row-span-full mt-[100px] flex flex-col items-center gap-[100px] justify-self-center"
+          class="flex flex-col items-center gap-[80px] justify-self-center lg:row-span-full lg:mt-[100px] lg:gap-[100px]"
         >
           <div class="relative">
             <img
               src="./assets/portrait-hilman.jpg"
               alt="A portrait of Hilman Fikry"
-              class="max-w-[300px] animate-[vertical-swing_3s_ease-in-out_infinite_alternate] rounded-sm"
+              class="max-w-[200px] animate-[vertical-swing_3s_ease-in-out_infinite_alternate] rounded-sm lg:max-w-[300px]"
             />
             <div
               class="shadowing absolute top-5 left-5 -z-1 size-full animate-[vertical-swing_3s_ease-in-out_500ms_infinite_alternate] rounded-sm bg-slate-500"
@@ -58,7 +64,7 @@
           </div>
           <nav>
             <a
-              class="contact-button block bg-slate-500 text-3xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600"
+              class="contact-button block bg-slate-500 lg:text-3xl text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600"
               href="#contact"
               >Contact me</a
             >
@@ -70,7 +76,9 @@
         <h3>Web development</h3>
         <div>
           <article>
-            <div id="battleship"></div>
+            <div class="video-wrapper">
+              <div id="battleship"></div>
+            </div>
             <h4>Battleship Game</h4>
             <p>
               A classic guessing game you can play with a friend or against a
@@ -109,7 +117,9 @@
             </div>
           </article>
           <article>
-            <div id="weather-app"></div>
+            <div class="video-wrapper">
+              <div id="weather-app"></div>
+            </div>
             <h4>WeatherApp</h4>
             <p>
               A visually soothing weather app featuring a frosted glass UI and
@@ -147,7 +157,9 @@
             </div>
           </article>
           <article>
-            <div id="todo-list"></div>
+            <div class="video-wrapper">
+              <div id="todo-list"></div>
+            </div>
             <h4>To Do List</h4>
             <p>
               A minimalist, dark-themed to-do app that's intuitive to use, just
@@ -186,7 +198,9 @@
             </div>
           </article>
           <article>
-            <div id="meater"></div>
+            <div class="video-wrapper">
+              <div id="meater"></div>
+            </div>
             <h4>Meater</h4>
             <p>
               A modern, responsive restaurant page that fuses earthy,
@@ -225,7 +239,9 @@
         <h3>Simulations and data analysis</h3>
         <div>
           <article>
-            <div id="mstm"></div>
+            <div class="video-wrapper">
+              <div id="mstm"></div>
+            </div>
             <h4>Multiple Sphere T-Matrix</h4>
             <p>
               A computational study exploring how different particle
@@ -295,7 +311,7 @@
       </section>
       <section class="separator pb-20" id="skills">
         <h2>Current Skills</h2>
-        <p class="mx-10 mt-6 border-l-4 border-slate-500 py-1 pl-5 text-xl">
+        <p class="mx-10 mt-6 border-l-4 border-slate-500 py-1 pl-5 lg:text-xl text-base">
           Here are the programming languages and tools I typically work with—and
           the list just keeps growing! :)
         </p>
@@ -451,7 +467,7 @@
         </div>
       </section>
       <section
-        class="separator grid grid-flow-col grid-rows-[max-content_1fr] pb-10"
+        class="separator grid justify-items-center lg:justify-items-stretch lg:grid-flow-col lg:grid-rows-[max-content_1fr] pb-10"
         id="contact"
       >
         <h2>
@@ -462,8 +478,8 @@
             alt=""
           />
         </h2>
-        <p class="my-3 ml-15 text-xl">A web developer from Indonesia</p>
-        <article class="row-span-full mt-[60px]">
+        <p class="my-3 lg:ml-15 text-xl">A web developer from Indonesia</p>
+        <article class="lg:row-span-full lg:mt-[60px] mt-[20px] justify-self-stretch">
           <h3 class="text-center">Get in touch</h3>
           <address>
             <article>
@@ -522,8 +538,8 @@
         </article>
       </section>
     </main>
-    <footer class="text-center text-white pb-8">
-      <p class="contact-button bg-slate-500 py-3">
+    <footer class="lg:pb-8 pb-5 md:text-center text-white">
+      <p class="contact-button bg-slate-500 lg:py-3 py-1.5 lg:text-base text-xs">
         Copyright &copy; gofhilman 2025 | The code for this website is open
         source.
         <a
