feat: add tool list items and improve images

--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,9 @@
         Hilman Fikry
       </h1>
       <nav>
-        <ul class="text-base flex justify-center gap-x-2 lg:gap-x-5 lg:text-2xl">
+        <ul
+          class="flex justify-center gap-x-2 text-base lg:gap-x-5 lg:text-2xl"
+        >
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -31,7 +33,7 @@
     </header>
     <main class="relative z-0 pt-[5px] lg:pt-[100px]">
       <section
-        class="grid xl:min-h-[calc(100vh-100px)] items-start gap-x-[40px] px-[20px] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] pb-20 xl:pb-0"
+        class="grid items-start gap-x-[40px] px-[20px] pb-20 xl:min-h-[calc(100vh-100px)] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] xl:pb-0"
         id="about"
       >
         <h2 class="flex flex-col self-center">
@@ -42,7 +44,7 @@
           ></span>
         </h2>
         <p
-          class="text-base/normal my-10 border-l-10 border-slate-500 px-10 py-5 lg:mr-30 lg:text-xl/normal"
+          class="my-10 border-l-10 border-slate-500 px-10 py-5 text-base/normal lg:mr-30 lg:text-xl/normal"
         >
           I'm a developer from Indonesia with roots in physics. I graduated as
           valedictorian from Institut Teknologi Bandung and earned a fully
@@ -54,7 +56,7 @@
         >
           <div class="relative">
             <img
-              src="./assets/portrait-hilman.jpg"
+              src="./assets/portrait-hilman.jpg?as=webp"
               alt="A portrait of Hilman Fikry"
               class="max-w-[200px] animate-[vertical-swing_3s_ease-in-out_infinite_alternate] rounded-sm lg:max-w-[300px]"
             />
@@ -64,7 +66,7 @@
           </div>
           <nav>
             <a
-              class="contact-button block bg-slate-500 lg:text-3xl text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600"
+              class="contact-button block bg-slate-500 text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600 lg:text-3xl"
               href="#contact"
               >Contact me</a
             >
@@ -284,7 +286,7 @@
             </div>
           </article>
           <article>
-            <img class="w-[560px]" src="./assets/fmr.png" alt="FMR data" />
+            <img class="w-[560px]" src="./assets/fmr.png?as=webp" alt="FMR data" />
             <h4>Ferromagnetic Resonance Analysis</h4>
             <p>
               A MATLAB-based program designed to analyze raw ferromagnetic
@@ -311,7 +313,9 @@
       </section>
       <section class="separator pb-20" id="skills">
         <h2>Current Skills</h2>
-        <p class="mx-10 mt-6 border-l-4 border-slate-500 py-1 pl-5 lg:text-xl text-base">
+        <p
+          class="mx-10 mt-6 border-l-4 border-slate-500 py-1 pl-5 text-base lg:text-xl"
+        >
           Here are the programming languages and tools I typically work with—and
           the list just keeps growing! :)
         </p>
@@ -428,6 +432,30 @@
           </figure>
           <figure>
             <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+            />
+            <figcaption>GitHub</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/netlify/netlify-original.svg"
+            />
+            <figcaption>Netlify</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vercel/vercel-original.svg"
+            />
+            <figcaption>Vercel</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cloudflare/cloudflare-original.svg"
+            />
+            <figcaption>Cloudflare</figcaption>
+          </figure>
+          <figure>
+            <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eslint/eslint-original.svg"
             />
             <figcaption>ESLint</figcaption>
@@ -467,7 +495,7 @@
         </div>
       </section>
       <section
-        class="separator grid justify-items-center lg:justify-items-stretch lg:grid-flow-col lg:grid-rows-[max-content_1fr] pb-10"
+        class="separator grid justify-items-center pb-10 lg:grid-flow-col lg:grid-rows-[max-content_1fr] lg:justify-items-stretch"
         id="contact"
       >
         <h2>
@@ -478,8 +506,10 @@
             alt=""
           />
         </h2>
-        <p class="my-3 lg:ml-15 text-xl">A web developer from Indonesia</p>
-        <article class="lg:row-span-full lg:mt-[60px] mt-[20px] justify-self-stretch">
+        <p class="my-3 text-xl lg:ml-15">A web developer from Indonesia</p>
+        <article
+          class="mt-[20px] justify-self-stretch lg:row-span-full lg:mt-[60px]"
+        >
           <h3 class="text-center">Get in touch</h3>
           <address>
             <article>
@@ -538,8 +568,10 @@
         </article>
       </section>
     </main>
-    <footer class="lg:pb-8 pb-5 md:text-center text-white">
-      <p class="contact-button bg-slate-500 lg:py-3 py-1.5 lg:text-base text-xs">
+    <footer class="pb-5 text-white md:text-center lg:pb-8">
+      <p
+        class="contact-button bg-slate-500 py-1.5 text-xs lg:py-3 lg:text-base"
+      >
         Copyright &copy; gofhilman 2025 | The code for this website is open
         source.
         <a
