feat: add more tool list items

--- a/src/template.html
+++ b/src/template.html
@@ -286,7 +286,11 @@
             </div>
           </article>
           <article>
-            <img class="w-[560px]" src="./assets/fmr.png?as=webp" alt="FMR data" />
+            <img
+              class="w-[560px]"
+              src="./assets/fmr.png?as=webp"
+              alt="FMR data"
+            />
             <h4>Ferromagnetic Resonance Analysis</h4>
             <p>
               A MATLAB-based program designed to analyze raw ferromagnetic
@@ -378,7 +382,7 @@
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vite/vite-original.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg"
             />
             <figcaption>Vite</figcaption>
           </figure>
@@ -479,6 +483,14 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lodash/lodash-original.svg"
             />
             <figcaption>Lodash</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/sharp.svg" />
+            <figcaption>Sharp</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/svgo_logo_icon_169702.svg" />
+            <figcaption>SVGO</figcaption>
           </figure>
           <figure>
             <img src="./assets/imagemin-seeklogo.svg" />
