feat: change project list

--- a/src/template.html
+++ b/src/template.html
@@ -79,6 +79,48 @@
         <div>
           <article>
             <div class="video-wrapper">
+              <div id="cvgen"></div>
+            </div>
+            <h4>CVGen</h4>
+            <p>
+              CVGen lets you convert your form input into a downloadable CV or
+              resume letter in real time. As you type, the content is instantly
+              reflected in the letter preview. The app offers three beautiful
+              theme colors for both the interface and the generated CV. Its
+              minimalistic design adapts responsively to any device, providing a
+              seamless experience.
+            </p>
+            <div class="project-tools">
+              <div><i class="devicon-html5-plain"></i> HTML</div>
+              <div><i class="devicon-css3-plain"></i> CSS</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+              <div><i class="devicon-react-original"></i> React</div>
+              <div>
+                <i class="devicon-tailwindcss-original"></i> Tailwind CSS
+              </div>
+            </div>
+            <div>
+              <a
+                href="https://cv-application-epd.pages.dev/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
+                  View live
+                </div>
+              </a>
+              <a
+                href="https://github.com/gofhilman/cv-application"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
+          </article>
+          <article>
+            <div class="video-wrapper">
               <div id="battleship"></div>
             </div>
             <h4>Battleship Game</h4>
@@ -192,44 +234,6 @@
               </a>
               <a
                 href="https://github.com/gofhilman/todo-list"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
-              <div id="meater"></div>
-            </div>
-            <h4>Meater</h4>
-            <p>
-              A modern, responsive restaurant page that fuses earthy,
-              street-style aesthetics with a clean and elegant user interface.
-              The menu section features a thoughtfully crafted layout and sharp
-              typography, creating a visually appealing and easy-to-navigate
-              experience across all devices.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-html5-plain"></i> HTML</div>
-              <div><i class="devicon-css3-plain"></i> CSS</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-              <div><i class="devicon-webpack-plain"></i> Webpack</div>
-            </div>
-            <div>
-              <a
-                href="https://gofhilman.github.io/restaurant-page/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/restaurant-page"
                 target="_blank"
                 rel="noopener noreferrer"
               >
