fix: add project tool and mstm video

--- a/src/template.html
+++ b/src/template.html
@@ -98,6 +98,7 @@
               <div>
                 <i class="devicon-tailwindcss-original"></i> Tailwind CSS
               </div>
+              <div><i class="devicon-vitejs-plain"></i> Vite</div>
             </div>
             <div>
               <a
