feat: add Vitest and Testing Library tools

--- a/src/template.html
+++ b/src/template.html
@@ -435,6 +435,12 @@
           </figure>
           <figure>
             <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitest/vitest-original.svg"
+            />
+            <figcaption>Vitest</figcaption>
+          </figure>
+          <figure>
+            <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/babel/babel-original.svg"
             />
             <figcaption>Babel</figcaption>
@@ -482,6 +488,10 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/latex/latex-original.svg"
             />
             <figcaption>LaTeX</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/testing-library-seeklogo.svg" />
+            <figcaption>Testing Library</figcaption>
           </figure>
           <figure>
             <img
