feat: add PostgreSQL and shadcn/ui tools

--- a/src/template.html
+++ b/src/template.html
@@ -381,6 +381,12 @@
         <div>
           <figure>
             <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg"
+            />
+            <figcaption>PostgreSQL</figcaption>
+          </figure>
+          <figure>
+            <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
             />
             <figcaption>React</figcaption>
@@ -420,6 +426,12 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
             />
             <figcaption>Tailwind CSS</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="./assets/shadcn-ui-seeklogo.svg"
+            />
+            <figcaption>shadcn/ui</figcaption>
           </figure>
           <figure>
             <img
