feat: add typing style for header

--- a/src/template.html
+++ b/src/template.html
@@ -16,13 +16,14 @@
       class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[10px] py-[8px] backdrop-blur-sm lg:px-[50px] lg:py-[15px]"
     >
       <h1
-        class="mr-4 text-lg font-medium whitespace-nowrap lg:mr-10 lg:text-3xl"
+        class="mr-4 text-base font-medium whitespace-nowrap lg:mr-10 lg:text-3xl"
       >
-        Hilman Fikry
+        <pre class="font-sans">&lt; <span id="head-typing"></span
+          ><span id="head-cursor"></span> /&gt;</pre>
       </h1>
       <nav>
         <ul
-          class="flex justify-center gap-x-2 text-base lg:gap-x-5 lg:text-2xl"
+          class="flex justify-center gap-x-2 text-sm lg:gap-x-5 lg:text-2xl"
         >
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -428,9 +429,7 @@
             <figcaption>Tailwind CSS</figcaption>
           </figure>
           <figure>
-            <img
-              src="./assets/shadcn-ui-seeklogo.svg"
-            />
+            <img src="./assets/shadcn-ui-seeklogo.svg" />
             <figcaption>shadcn/ui</figcaption>
           </figure>
           <figure>
