fix: improve header UI

--- a/src/template.html
+++ b/src/template.html
@@ -13,17 +13,19 @@
   </head>
   <body class="px-[8px] lg:px-[50px]">
     <header
-      class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[10px] py-[8px] backdrop-blur-sm lg:px-[50px] lg:py-[15px]"
+      class="progress-bar fixed inset-x-0 top-0 z-1 flex items-center justify-between bg-white/20 px-[10px] py-[20px] backdrop-blur-sm lg:px-[50px] lg:py-[18px]"
     >
       <h1
-        class="mr-4 text-base font-medium whitespace-nowrap lg:mr-10 lg:text-3xl"
+        class="mr-3 text-base font-semibold whitespace-nowrap lg:mr-10 lg:text-3xl"
       >
-        <pre class="font-sans">&lt; <span id="head-typing"></span
-          ><span id="head-cursor"></span> /&gt;</pre>
+        <a href="/">
+          <pre class="font-sans">&lt; <span id="head-typing"></span
+            ><span id="head-cursor"></span> /&gt;</pre>
+        </a>
       </h1>
       <nav>
         <ul
-          class="flex justify-center gap-x-2 text-sm lg:gap-x-5 lg:text-2xl"
+          class="flex justify-center items-center gap-x-2 text-sm lg:gap-x-5 lg:text-2xl font-medium"
         >
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
