fix: update header href

--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
       <h1
         class="mr-3 text-base font-semibold whitespace-nowrap lg:mr-10 lg:text-3xl"
       >
-        <a href="/">
+        <a href="/homepage">
           <pre class="font-sans">&lt; <span id="head-typing"></span
             ><span id="head-cursor"></span> /&gt;</pre>
         </a>
