style: fix mobile responsive padding style

--- a/src/template.html
+++ b/src/template.html
@@ -336,7 +336,7 @@
       <section class="separator pb-20" id="skills">
         <h2>Current Skills</h2>
         <p
-          class="mx-30 mt-6 border-l-4 border-slate-500 py-1 pl-5 text-base lg:text-xl"
+          class="mx-10 mt-6 border-l-4 border-slate-500 py-1 pl-5 text-base lg:mx-30 lg:text-xl"
         >
           I build responsive and accessible web apps with clean architecture and
           dynamic interfaces, using modern frameworks and core technologies. My
@@ -450,12 +450,6 @@
             />
             <figcaption>Git</figcaption>
           </figure>
-          <!-- <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg"
-            />
-            <figcaption>npm</figcaption>
-          </figure> -->
           <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
@@ -540,30 +534,6 @@
             />
             <figcaption>OpenCV</figcaption>
           </figure>
-          <!-- <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
-            />
-            <figcaption>GitHub</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/netlify/netlify-original.svg"
-            />
-            <figcaption>Netlify</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vercel/vercel-original.svg"
-            />
-            <figcaption>Vercel</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cloudflare/cloudflare-original.svg"
-            />
-            <figcaption>Cloudflare</figcaption>
-          </figure> -->
           <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eslint/eslint-original.svg"
@@ -578,24 +548,6 @@
             <img src="./assets/testing-library-seeklogo.svg" />
             <figcaption>Testing Library</figcaption>
           </figure>
-          <!-- <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lodash/lodash-original.svg"
-            />
-            <figcaption>Lodash</figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/sharp.svg" />
-            <figcaption>Sharp</figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/svgo_logo_icon_169702.svg" />
-            <figcaption>SVGO</figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/imagemin-seeklogo.svg" />
-            <figcaption>Imagemin</figcaption>
-          </figure> -->
           <figure>
             <img src="./assets/v2-7a8ee7eb8cc95edc8b304c2bb1fab75c_ipico.png" />
             <figcaption>date-fns</figcaption>
@@ -618,7 +570,9 @@
             alt=""
           />
         </h2>
-        <p class="my-3 text-xl lg:ml-15">A fullstack web developer from Indonesia</p>
+        <p class="my-3 text-xl lg:ml-15">
+          A fullstack web developer from Indonesia
+        </p>
         <article
           class="mt-[20px] justify-self-stretch lg:row-span-full lg:mt-[60px]"
         >
