--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hilman Fikry | Web Developer - Indonesia</title>
+    <title>Hilman Fikry | Software Engineer - Indonesia</title>
     <link href="./assets/favicon-hilman.jpg" rel="icon" type="image/jpg" />
     <link
       rel="stylesheet"
@@ -49,7 +49,7 @@
         <p
           class="my-10 border-l-10 border-slate-500 px-10 py-5 text-base/normal lg:mr-30 lg:text-xl/normal"
         >
-          I'm a fullstack web developer and data engineer with a solid
+          I'm a software engineer / fullstack web developer with a solid
           foundation in core web technologies and a focus on modern frameworks
           like React and Node.js. I build responsive, accessible applications
           with clean architecture and scalable backend logic.
@@ -79,6 +79,57 @@
       <section class="separator flex flex-col pb-20" id="projects">
         <h2 class="line mb-10">Featured Projects</h2>
         <div>
+          <article>
+            <div class="video-wrapper">
+              <div id="mini-drive"></div>
+            </div>
+            <h4>Mini Drive</h4>
+            <p>
+              This project is a simplified Google Drive alternative that lets
+              users securely upload, manage, and share files and folders. It
+              supports authentication, file and folder operations, size
+              tracking, and organized hierarchies, with features like folder
+              sharing with expiration dates and validation to ensure
+              reliability.
+            </p>
+            <div class="project-tools">
+              <div><i class="devicon-nodejs-plain"></i> Node.js</div>
+              <div><i class="devicon-express-original"></i> Express</div>
+              <div><i class="devicon-prisma-original"></i> Prisma ORM</div>
+              <div><i class="devicon-postgresql-plain"></i> PostgreSQL</div>
+              <div><i class="devicon-supabase-plain"></i> Supabase</div>
+              <div><i class="devicon-passport-plain"></i> Passport.js</div>
+              <div><i class="devicon-typescript-plain"></i> TypeScript</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+              <div class="center-icon">
+                <img
+                  class="white-icon"
+                  src="./assets/ejs-svgrepo-com.svg"
+                  alt="Icon"
+                />
+                EJS
+              </div>
+            </div>
+            <div>
+              <a
+                href="https://gofhilman-file-uploader.koyeb.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
+                  View live
+                </div>
+              </a>
+              <a
+                href="https://github.com/gofhilman/file-uploader"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
+          </article>
           <article>
             <div class="video-wrapper">
               <div id="project-inventory"></div>
@@ -324,6 +375,41 @@
               </a>
             </div>
           </article>
+          <article>
+            <div class="video-wrapper">
+              <div id="meater"></div>
+            </div>
+            <h4>Restaurant Page</h4>
+            <p>
+              Meater is a restaurant website that provides users with an
+              interactive experience to explore the restaurant's menu, contact
+              details, and opening hours. The website is built with modular
+              JavaScript and styled for a clean and modern look.
+            </p>
+            <div class="project-tools">
+              <div><i class="devicon-webpack-plain"></i> Webpack</div>
+              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
+            </div>
+            <div>
+              <a
+                href="https://gofhilman.github.io/restaurant-page/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
+                  View live
+                </div>
+              </a>
+              <a
+                href="https://github.com/gofhilman/restaurant-page"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
+          </article>
         </div>
         <a
           class="contact-button mt-15 block self-center bg-slate-500 text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600 lg:text-3xl"
@@ -394,7 +480,7 @@
             <figcaption>Fortran</figcaption>
           </figure>
         </div>
-        <h3>Tools</h3>
+        <h3>Backend Development</h3>
         <div>
           <figure>
             <img
@@ -414,6 +500,43 @@
             />
             <figcaption>PostgreSQL</figcaption>
           </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/prisma/prisma-original.svg"
+            />
+            <figcaption>Prisma ORM</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/supabase/supabase-original.svg"
+            />
+            <figcaption>Supabase</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="assets/cloudinary-free-logo_svgstack_com_28081766118907.svg"
+            />
+            <figcaption>Cloudinary</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/passport/passport-original.svg"
+            />
+            <figcaption>Passport.js</figcaption>
+          </figure>
+          <figure>
+            <img src="assets/ejs-svgrepo-com.svg" />
+            <figcaption>EJS</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg"
+            />
+            <figcaption>Jest</figcaption>
+          </figure>
+        </div>
+        <h3>Frontend Development</h3>
+        <div>
           <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
@@ -446,12 +569,6 @@
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
-            />
-            <figcaption>Git</figcaption>
-          </figure>
-          <figure>
-            <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
             />
             <figcaption>Tailwind CSS</figcaption>
@@ -467,16 +584,6 @@
             <figcaption>PostCSS</figcaption>
           </figure>
           <figure>
-            <img src="assets/ejs-svgrepo-com.svg" />
-            <figcaption>EJS</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg"
-            />
-            <figcaption>Jest</figcaption>
-          </figure>
-          <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitest/vitest-original.svg"
             />
@@ -487,6 +594,19 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/babel/babel-original.svg"
             />
             <figcaption>Babel</figcaption>
+          </figure>
+          <figure>
+            <img src="./assets/testing-library-seeklogo.svg" />
+            <figcaption>Testing Library</figcaption>
+          </figure>
+        </div>
+        <h3>Other Tools</h3>
+        <div>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
+            />
+            <figcaption>Git</figcaption>
           </figure>
           <figure>
             <img
@@ -545,10 +665,6 @@
             <figcaption>Prettier</figcaption>
           </figure>
           <figure>
-            <img src="./assets/testing-library-seeklogo.svg" />
-            <figcaption>Testing Library</figcaption>
-          </figure>
-          <figure>
             <img src="./assets/v2-7a8ee7eb8cc95edc8b304c2bb1fab75c_ipico.png" />
             <figcaption>date-fns</figcaption>
           </figure>
@@ -571,7 +687,7 @@
           />
         </h2>
         <p class="my-3 text-xl lg:ml-15">
-          A fullstack web developer from Indonesia
+          A software engineer from Indonesia
         </p>
         <article
           class="mt-[20px] justify-self-stretch lg:row-span-full lg:mt-[60px]"
