fix: remove photo animation

--- a/src/template.html
+++ b/src/template.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hilman Fikry | Software Engineer - Indonesia</title>
-    <link href="./assets/favicon-hilman.jpg" rel="icon" type="image/jpg" />
+    <title>Hilman Fikry | Indonesia</title>
+    <link href="./assets/favicon-hilman.jpg" rel="icon" type="image/jpeg" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -34,9 +34,9 @@
         </ul>
       </nav>
     </header>
-    <main class="relative z-0 pt-[5px] lg:pt-[100px]">
+    <main class="relative z-0 pt-[35px] lg:pt-[100px]">
       <section
-        class="grid items-start gap-x-[40px] px-[20px] pb-20 xl:min-h-[calc(100vh-100px)] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] xl:pb-0"
+        class="grid items-start gap-x-[40px] px-[20px] pb-35 xl:min-h-[calc(100vh-100px)] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] xl:pb-0"
         id="about"
       >
         <h2 class="flex flex-col self-center">
@@ -47,29 +47,27 @@
           ></span>
         </h2>
         <p
-          class="my-10 border-l-10 border-slate-500 px-10 py-5 text-base/normal lg:mr-30 lg:text-xl/normal"
+          class="my-10 border-l-10 border-slate-500 px-10 py-5 text-base/normal lg:text-lg/normal xl:mr-30 xl:text-xl/normal"
         >
-          I'm a software engineer / fullstack web developer with a solid
-          foundation in core web technologies and a focus on modern frameworks
-          like React and Node.js. I build responsive, accessible applications
-          with clean architecture and scalable backend logic.
+          I'm a software and data engineer, passionate about building scalable
+          applications and robust data pipelines with clean architecture.
         </p>
         <div
-          class="flex flex-col items-center gap-[80px] justify-self-center lg:row-span-full lg:mt-[100px] lg:gap-[100px]"
+          class="flex flex-col items-center gap-[80px] justify-self-center xl:row-span-full xl:mt-[130px] xl:gap-[100px]"
         >
           <div class="relative">
             <img
               src="./assets/portrait-hilman.jpg?as=webp"
               alt="A portrait of Hilman Fikry"
-              class="max-w-[200px] animate-[vertical-swing_3s_ease-in-out_infinite_alternate] rounded-sm lg:max-w-[300px]"
+              class="max-w-[200px] rounded-sm xl:max-w-[300px]"
             />
             <div
-              class="shadowing absolute top-5 left-5 -z-1 size-full animate-[vertical-swing_3s_ease-in-out_500ms_infinite_alternate] rounded-sm bg-slate-500"
+              class="shadowing absolute top-5 left-5 -z-1 size-full rounded-sm bg-slate-500"
             ></div>
           </div>
           <nav>
             <a
-              class="contact-button block bg-slate-500 text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600 lg:text-3xl"
+              class="contact-button block bg-slate-500 text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600 xl:text-3xl"
               href="#contact"
               >Contact me</a
             >
@@ -686,9 +684,7 @@
             alt=""
           />
         </h2>
-        <p class="my-3 text-xl lg:ml-15">
-          A software engineer from Indonesia
-        </p>
+        <p class="my-3 text-xl lg:ml-15">A software engineer from Indonesia</p>
         <article
           class="mt-[20px] justify-self-stretch lg:row-span-full lg:mt-[60px]"
         >
